# trace-table-generator

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
src/utf_table_generator/: table.py
