[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utf_table_generator"
version = "1.0.4"
authors = [
  { name="thecattest", email="vodopyanov999@gmail.com" },
]
description = "Simple package that generates UTF-8 tables"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thecattest/utf-table-generator"
"Bug Tracker" = "https://github.com/thecattest/utf-table-generator/issues"
